--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "uvicorn",
     "pandas",
     "python-dateutil",
-    "jinja2"
+    "jinja2",
+    "python-multipart"
 ]
 
 [project.optional-dependencies]
